tests/fail/test-neg-wrong-assignation.ctds
void main(){
  integer x;
  x= true;
}